# SharedLibraries

./: README.md  installlib.sh  test  test.c
SQL/: sql.h
bricker/: brick.c  brick.h
colors/: colors.c  colors.h  num  numbers.c
ds/: CMakeLists.txt  DataStructures
ds/.cache/clangd/index/: example.c.55B8531DEC0A6D63.idx  inner.c.F0AF3F5A8FCDADF3.idx  inner.h.68D451FC1118C100.idx  vec.h.41146E5FFF051A6A.idx
ds/includes/: vec.h
ds/src/: example.c  inner.c
errors/: errors.h  test  test.c
json/: json.h
process/: proc  process.c  process.h
str/: .clang-format  perf.data  str.c  str.h
tests/: test  test.c
